update docker compose profile core